6th commit: Add splitChunk optimization for webpack

--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
   "author": "Ryan Liu <ryan@launchlab.com.au> (https://www.launchlab.com.au)",
   "license": "ISC",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.7",
+    "apollo-client": "^2.3.8",
+    "apollo-link-http": "^1.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2"
   },
   "devDependencies": {
