--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["env", "react", "stage-2"]
+  "presets": ["env", "react", "stage-2"],
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "minify": true
+      }
+    ]
+  ]
 }
