--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^3.4.2"
   },
   "devDependencies": {
